--- a/style.css
+++ b/style.css
@@ -472,7 +472,7 @@ header {
   background-color: var(--clr-neutral-100);
 
   .subscribe-form {
-    width: 40%;
+    width: min(25rem, 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -507,6 +507,7 @@ main {
   }
 
   .card {
+    display: grid;
     grid-column: span 3;
     background-color: var(--clr-neutral-100);
     padding: var(--space-400);
@@ -778,12 +779,6 @@ main {
         grid-column: span 6;
         grid-row: span 1;
       }
-    }
-  }
-
-  .newsletter {
-    .subscribe-form {
-      width: 100%;
     }
   }
 
