--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Theme */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 /* reset from Kevin Powell edit if you like */
 
 /* makes sizing simpler */
@@ -63,9 +66,6 @@ main {
   margin: 0;
   padding: 0;
 }
-
-/* Theme */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 :root {
   --clr-neutral-100: hsl(0, 0%, 100%);
@@ -389,12 +389,12 @@ header {
     align-items: center;
     color: var(--clr-accent);
 
-    ul.menu {
+    ul.header-menu {
       display: flex;
       justify-content: space-between;
       gap: var(--space-600);
 
-      li > a.menu-link {
+      li > a.header-menu-link {
         text-transform: uppercase;
         text-decoration: none;
         font-weight: var(--fw-semi-bold);
@@ -414,7 +414,7 @@ header {
     }
   }
 
-  .menu-icon {
+  .menu-bars-icon {
     display: none;
   }
 }
@@ -479,6 +479,7 @@ header {
     margin-right: var(--space-600);
     gap: var(--space-400);
 
+    /* Collates both input email and submit */
     .input-container {
       border: 2px solid var(--clr-neutral-800);
       border-radius: 2rem;
@@ -670,12 +671,12 @@ main {
 @container (width < 875px) {
   header {
     /* Hide nav-menu */
-    nav > ul.menu {
+    nav > ul.header-menu {
       display: none;
     }
 
     /* Show menu icon */
-    .menu-icon {
+    .menu-bars-icon {
       display: block;
       font-size: var(--fs-700);
       padding: 1rem;
